--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -5,7 +5,11 @@
 
 <ul>
   {% for topic in topics %}
-    <li>{{ topic.text }}</li>
+    <li>
+        <a href="{% url 'learning_logs:topic' topic.id%}">
+            {{ topic.text }}
+        </a>
+    </li>
   {% empty %}
     <li>No topics have benn added yet.</li>
   {% endfor %}
